--- a/recipes/style.css
+++ b/recipes/style.css
@@ -2,12 +2,12 @@
 *
 {
     box-sizing: border-box;
+    font-family: 'Playfair Display', serif;
 }
 
 h1
 {
     text-align: center;
-    font-family: 'Tahoma';
     font-size: 45px;
     font-weight:lighter;
 }
@@ -15,14 +15,16 @@ h1
 #salmon-image 
 {
     width: 400px;
-    height: 400px;
-    border-radius: 200px;   
+    height: 350px;
+    border-radius: 25px;  
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
 }
-
 
 .navigation
 {
-    background-color: grey;
+    background-color: #C89F9C;
     display: inline-block;
     display: flex;
     justify-content: space-evenly;
@@ -32,30 +34,20 @@ h1
 
 body
 {
-    font-family: 'Tahoma';
-    background-image: url("images/salmon-background.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url("images/lemon-background.jpg");
+
+    color: #5C4742;
 }
 
 
 .text-area 
 {
-    background-color: #f2e9e4;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding-left: 20px;
-    padding-right: 20px;
+    background-color: white;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+    border: #f2e9e4 solid 1px;
 }
 
-.flex-item
-{
- display:flex;   
- flex-wrap:wrap;
- justify-content: space-evenly;
-}
-
-.description
-{
-    text-align: center;
-}
